@@ -14,12 +14,12 @@
     <classsynopsis language="python">
       <ooclass><classname>pango.Color</classname></ooclass>
       <ooclass><classname>gobject.GBoxed</classname></ooclass>
-      <methodsynopsis language="python">
+      <constructorsynopsis language="python">
 	<methodname><link
-linkend="method-pangocolor--parse">parse</link></methodname>
+linkend="constructor-pangocolor">pango.Color</link></methodname>
 	<methodparam><parameter
 		       role="keyword">spec</parameter></methodparam>
-      </methodsynopsis>
+      </constructorsynopsis>
     </classsynopsis>
 
   </refsect1>
@@ -76,44 +76,40 @@ ranges from 0 to 65535.</para>
 
   </refsect1>
 
-  <refsect1>
-    <title>Methods</title>
+  <refsect1 id="constructor-pangocolor">
+    <title>Constructor</title>
 
-  <refsect2 id="method-pangocolor--parse">
-      <title>pango.Color.parse</title>
-
-      <programlisting><methodsynopsis language="python">
-	  <methodname>parse</methodname>
-	  <methodparam><parameter
-			 role="keyword">spec</parameter></methodparam>
-	</methodsynopsis></programlisting>
-      <variablelist>
-	<varlistentry>
-	  <term><parameter>spec</parameter>&nbsp;:</term>
-	  <listitem><simpara>a string specifying the new
+    <programlisting><constructorsynopsis language="python">
+        <methodname>pango.Color</methodname>
+        <methodparam><parameter
+                       role="keyword">spec</parameter></methodparam>
+      </constructorsynopsis></programlisting>
+    <variablelist>
+      <varlistentry>
+        <term><parameter>spec</parameter>&nbsp;:</term>
+        <listitem><simpara>a string specifying the new
 color</simpara></listitem>
-	</varlistentry>
-	<varlistentry>
-	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
-	  <listitem><simpara><literal>TRUE</literal> if
-<parameter>spec</parameter> was successfully parsed</simpara></listitem>
-	</varlistentry>
-      </variablelist>
+      </varlistentry>
+      <varlistentry>
+        <term><emphasis>Returns</emphasis>&nbsp;:</term>
+        <listitem><simpara>a new <link
+linkend="class-pangocolor"><classname>pango.Color</classname></link>
+object.</simpara></listitem>
+      </varlistentry>
+    </variablelist>
 
-      <para>The <methodname>parse</methodname>() method fills in the color
-attributes of the <link
-linkend="class-pangocolor"><classname>pango.Color</classname></link> from
-the string <parameter>spec</parameter>. The string in
-<parameter>spec</parameter> can either one of a large set of standard names.
-(Taken from the X11 <filename>rgb.txt</filename> file), or it can be a hex
-value in the form '<literal>rgb</literal>' '<literal>rrggbb</literal>'
+    <para>Creates a new <link
+linkend="class-pangocolor"><classname>pango.Color</classname></link> using
+the color attributes specified by the string
+<parameter>spec</parameter>. The string in <parameter>spec</parameter> can
+either one of a large set of standard names.  (Taken from the X11
+<filename>rgb.txt</filename> file), or it can be a hex value in the form
+'<literal>rgb</literal>' '<literal>rrggbb</literal>'
 '<literal>rrrgggbbb</literal>' or '<literal>rrrrggggbbbb</literal>' where
 'r', 'g' and 'b' are hex digits of the red, green, and blue components of
 the color, respectively. (White in the four forms is
 '<literal>fff</literal>' '<literal>ffffff</literal>'
 '<literal>fffffffff</literal>' and '<literal>ffffffffffff</literal>')</para>
-
-    </refsect2>
 
   </refsect1>
 
