@@ -1,3 +1,8 @@
+2005-07-21  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-pangocolor.xml (pango.Color): remove parse() method and replace
+	with pango.Colo()r constructor.
+
 2005-07-19  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gdkwindow.xml (various): Reference GDK constants directly
